# FinalWork

./: CMakeLists.txt  README.md  start.sh
include/: dataProcessor.h  movieData.h
src/: dataProcessor.cpp  main.cpp  test.cpp
src/output/: main
